@@ -1,0 +1,4 @@
+ruleset_DATA = simple.rules
+rulesetdir = $(configdir)/ruleset
+
+EXTRA_DIST = $(ruleset_DATA)
